language/move-prover/tests/sources/regression/generic_invariant200518.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/regression/generic_invariant200518.move:63:9 ───
    │
 63 │         invariant spec_addr_is_association(sender());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/generic_invariant200518.move:24:5: remove_privilege
    =         addr = <redacted>,
    =         $t1 = <redacted>
    =     at tests/sources/regression/generic_invariant200518.move:28:9: remove_privilege
    =     at tests/sources/regression/generic_invariant200518.move:40:52: root_address (entry)
    =         result = <redacted>
    =     at tests/sources/regression/generic_invariant200518.move:40:52: root_address (exit)
    =     at tests/sources/regression/generic_invariant200518.move:26:9: remove_privilege
    =     at tests/sources/regression/generic_invariant200518.move:28:46: remove_privilege
